progress on testing variations, fixed extra space at the bottom of the homepage

--- a/frontend/less/main.less
+++ b/frontend/less/main.less
@@ -123,10 +123,10 @@ a.list-group-special:hover {
 .content {
 	background-color: @color-background;
 	padding-top: 75px;
-	padding-bottom: 30px;
 }
 
-.content > div {
+.content > .container {
+	padding-bottom: 30px;
 }
 
 .footer {
