--- a/frontend/views/homeView.less
+++ b/frontend/views/homeView.less
@@ -46,6 +46,7 @@
 #homeView {
 	padding-left: 60px;
 	padding-right: 60px;
+	padding-bottom: 0;
 
 	.row {
 		margin-left: -60px;
@@ -149,9 +150,10 @@
 	/* end &.examples */
 	}
 
-	&.quickInfoA {
+	&.quickInfoA, &.quickInfoB {
 		h2 {
-			font-size: 14px;
+			font-size: 24px;
+			line-height: 27px;
 		}
 
 		.youtube {
@@ -160,6 +162,11 @@
 		.mailchimp {
 			width: 100%;
 			margin-bottom: 25px; 
+		}
+
+		p.subscribe {
+			text-align: center;
+			padding: 10px;
 		}
 	}
 
